--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,11 @@
     <link rel="stylesheet" href="./assets/Admin_Assests/plugins/animation/css/animate.min.css">
     <!-- vendor css -->
     <link rel="stylesheet" href="./assets/Admin_Assests/css/style.css">
-      </head>
-<body>
+            <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+<body class="mat-typography">
     <app-root></app-root>
   <script src="./assets/js/jquery-3.3.1.min.js"></script>
   <script src="./assets/js/jquery-ui.js"></script>
