--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,9 @@
   <link type="text/css" href="assets/css/sweetalert2.min.css" rel="stylesheet">
   <link type="text/css" href="assets/css/notyf.min.css" rel="stylesheet">
   <link type="text/css" href="assets/css/volt.css" rel="stylesheet">
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFaXNvUSNlqQoqlNBgCgppWcSeYxb5kDM"></script>
+
   
 </head>
 <body class="mat-typography">
