--- a/src/index.html
+++ b/src/index.html
@@ -44,24 +44,18 @@
   <link rel="mask-icon" href="./assets/img/safari-pinned-tab.svg" color="#ffffff">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
-<<<<<<< HEAD
-  <link type="text/css" href="./assets/css/sweetalert2.min.css" rel="stylesheet">
-  <link type="text/css" href="./assets/css/notyf.min.css" rel="stylesheet">
-  <link type="text/css" href="./assets/css/volt.css" rel="stylesheet">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_Fwa2-Nv3PWepQESLHgA4aqVopCzidFk" 
     type="text/javascript"></script>
     <script
     src="https://www.paypal.com/sdk/js?client-id=AUXS-nC29_3TXeKF3AB-o9N1ztc_4_no0ujwC4tFiR3StVeWf-9mihK9ang7kym8HySqWT5JuyblJknh">
   </script>
-=======
   <link type="text/css" href="assets/css/sweetalert2.min.css" rel="stylesheet">
   <link type="text/css" href="assets/css/notyf.min.css" rel="stylesheet">
   <link type="text/css" href="assets/css/volt.css" rel="stylesheet">
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFaXNvUSNlqQoqlNBgCgppWcSeYxb5kDM"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD52F-aPviv4KffiCx2zJPi_rWwA8s1tKM"></script>
 
   
->>>>>>> db0103c58df9c7975adb7416cf210fb9208d914c
 </head>
 <body class="mat-typography">
     <app-root></app-root>
@@ -78,7 +72,7 @@
   <script src="./assets/js/isotope.pkgd.min.js"></script>
 
   <script src="./assets/js/main.js"></script>
-
+<!-- 
 
 <script src="assets/js/popper.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
@@ -94,7 +88,7 @@
 <script src="assets/js/notyf.min.js"></script>
 <script src="assets/js/simplebar.min.js"></script>
 <script src="assets/js/volt.js"></script>
-<script async defer="defer" src="https://buttons.github.io/buttons.js"></script>
+<script async defer="defer" src="https://buttons.github.io/buttons.js"></script> -->
 
 
 </body>
