--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,9 @@
   <link type="text/css" href="assets/css/sweetalert2.min.css" rel="stylesheet">
   <link type="text/css" href="assets/css/notyf.min.css" rel="stylesheet">
   <link type="text/css" href="assets/css/volt.css" rel="stylesheet">
+
+  
+
   
 </head>
 <body class="mat-typography">
@@ -73,7 +76,7 @@
 
   <script src="./assets/js/main.js"></script>
 
-
+<!-- 
 <script src="assets/js/popper.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
 <script src="assets/js/on-screen.umd.min.js"></script>
@@ -88,7 +91,7 @@
 <script src="assets/js/notyf.min.js"></script>
 <script src="assets/js/simplebar.min.js"></script>
 <script src="assets/js/volt.js"></script>
-<script async defer="defer" src="https://buttons.github.io/buttons.js"></script>
+<script async defer="defer" src="https://buttons.github.io/buttons.js"></script> -->
 
 
 </body>
