--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,8 @@
     <script
     src="https://www.paypal.com/sdk/js?client-id=AUXS-nC29_3TXeKF3AB-o9N1ztc_4_no0ujwC4tFiR3StVeWf-9mihK9ang7kym8HySqWT5JuyblJknh">
   </script>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
     <app-root></app-root>
